<resources>
    <string name="url">http://192.168.43.161:8080/Bikso/</string>
    <string name="url1">https://maps.googleapis.com/maps/api/</string>
    <string name="Rs">\u20B9\u00A0</string>
    <string name="app_name">Bikso</string>
    <string name="activity_homepage_drawerlayout_id">dl</string>
    <string name="activity_homepage_relativelayout_recyclerview_id">rv</string>
    <string name="activity_homepage_navigationview_id">nv</string>
    <string name="homepage_recyclerview_relativelayout_imageview_id">photo</string>
    <string name="homepage_recyclerview_relativelayout_linearlayout_id">ll</string>
    <string name="homepage_recyclerview_relativelayout_linearlayout_relativelayout_textview_id">name</string>
    <string name="homepage_recyclerview_relativelayout_linearlayout_relativelayout_textview2_id">authorisation</string>
    <string name="homepage_recyclerview_relativelayout_linearlayout_textview_id">location</string>
    <string name="homepage_recyclerview_relativelayout_linearlayout_ratingbar_id">stars</string>
    <string name="navigation_menu_item_id">item</string>
    <string name="navigation_menu_item1_id">item1</string>
    <string name="navigation_menu_item2_id">item2</string>
    <string name="navigation_menu_item3_id">item3</string>
    <string name="navigation_menu_item4_id">item4</string>
    <string name="navigation_menu_item5_id">item5</string>
    <string name="activity_service_centre_page_viewpager_id">images</string>
    <string name="activity_service_centre_page_linearlayout_id">dots</string>
    <string name="activity_service_centre_page_listview_id">lv1</string>
    <string name="activity_service_centre_page_button_id">proceed</string>
    <string name="service_centre_page_imageview_imageview_id">img</string>
    <string name="service_centre_page_listview_header_textview_id">name1</string>
    <string name="service_centre_page_listview_header_textview2_id">about</string>
    <string name="service_centre_page_listview_header_textview3_id">review</string>
    <string name="service_centre_page_listview_linearlayout_id">ll1</string>
    <string name="service_centre_page_listview_linearlayout_textview_id">name2</string>
    <string name="service_centre_page_listview_linearlayout_textview2_id">dot</string>
    <string name="service_centre_page_listview_linearlayout_textview3_id">time</string>
    <string name="service_centre_page_listview_ratingbar_id">stars1</string>
    <string name="service_centre_page_listview_textview_id">description</string>
    <string name="activity_services_selection_textview_id">select_service</string>
    <string name="activity_services_selection_checkbox_id">cb</string>
    <string name="activity_services_selection_checkbox2_id">cb1</string>
    <string name="activity_services_selection_checkbox3_id">cb2</string>
    <string name="activity_services_selection_checkbox4_id">cb3</string>
    <string name="activity_services_selection_edittext_id">others</string>
    <string name="activity_services_selection_button_id">book_time</string>
    <string name="activity_time_slot_selection_textview_id">select_time</string>
    <string name="activity_time_slot_selection_radiogroup_id">rg</string>
    <string name="activity_time_slot_selection_button_id">book</string>
    <string name="activity_service_booked_progressbar_id">pb</string>
    <string name="activity_service_booked_imageview_id">success</string>
    <string name="activity_service_booked_textview_id">tv</string>
    <string name="activity_service_booked_textview2_id">tv1</string>
    <string name="activity_service_booked_textview3_id">tv2</string>
    <string name="activity_service_booked_textview4_id">tv3</string>
    <string name="activity_service_booked_textview5_id">tv4</string>
    <string name="activity_service_booked_textview6_id">tv5</string>
    <string name="activity_service_booked_textview7_id">tv6</string>
    <string name="activity_service_booked_linearlayout_button_id">btn</string>
    <string name="activity_service_booked_linearlayout_button1_id">btn1</string>
    <string name="activity_service_booked_button_id">btn2</string>
    <string name="activity_booking_history_progressbar_id">pb1</string>
    <string name="activity_booking_history_radiogroup_id">rgsort</string>
    <string name="activity_booking_history_radiogroup_radiobutton_id">rb</string>
    <string name="activity_booking_history_radiogroup_radiobutton2_id">rb1</string>
    <string name="activity_booking_history_radiogroup_radiobutton3_id">rb2</string>
    <string name="activity_booking_history_radiogroup_radiobutton4_id">rb3</string>
    <string name="activity_booking_history_recyclerview_id">rvhis</string>
    <string name="booking_history_recyclerview_relativelayout_textview_id">name3</string>
    <string name="booking_history_recyclerview_relativelayout_textview2_id">time1</string>
    <string name="booking_history_recyclerview_relativelayout_textview3_id">amount</string>
    <string name="activity_bikes_owned_imageview_id">nobikeimg</string>
    <string name="activity_bikes_owned_textview_id">nobiketext</string>
    <string name="activity_bikes_owned_recyclerview_id">rvbike</string>
    <string name="activity_bikes_owned_button_id">add_bike</string>
    <string name="bikes_owned_recyclerview_relativelayout_textview_id">bname</string>
    <string name="bikes_owned_recyclerview_relativelayout_imageview_id">bimage</string>
    <string name="activity_bike_page_relativelayout_imageview_id">bimg</string>
    <string name="activity_bike_page_relativelayout_materialbutton_id">chngimg</string>
    <string name="activity_bike_page_relativelayout_textinputlayout_id">bnameeditouter</string>
    <string name="activity_bike_page_relativelayout_textinputlayout_edittext_id">bnameedit</string>
    <string name="activity_bike_page_relativelayout_textinputlayout2_id">bmakeeditouter</string>
    <string name="activity_bike_page_relativelayout_textinputlayout2_spinner_id">bmakeedit</string>
    <string name="activity_bike_page_relativelayout_textinputlayout3_id">bmodeleditouter</string>
    <string name="activity_bike_page_relativelayout_textinputlayout3_spinner_id">bmodeledit</string>
    <string name="activity_bike_page_relativelayout_textinputlayout4_id">byeareditouter</string>
    <string name="activity_bike_page_relativelayout_textinputlayout4_edittext_id">byearedit</string>
    <string name="activity_bike_page_relativelayout_materialbutton2_id">modcon</string>
    <string name="activity_profile_imageview_id">primg</string>
    <string name="activity_profile_textview_id">prname</string>
    <string name="activity_profile_edittext_id">prnameedit</string>
    <string name="activity_profile_textview1_id">premail</string>
    <string name="activity_profile_edittext1_id">premailedit</string>
    <string name="activity_profile_textview2_id">praddress</string>
    <string name="activity_profile_edittext2_id">praddressedit</string>
    <string name="activity_profile_textview3_id">prmob</string>
    <string name="activity_profile_edittext3_id">prmobedit</string>
    <string name="activity_profile_textview4_id">prpass</string>
    <string name="activity_profile_edittext4_id">proldpass</string>
    <string name="activity_profile_edittext5_id">prnewpass</string>
    <string name="activity_profile_edittext6_id">prconpass</string>
    <string name="activity_profile_button_id">modsave</string>
    <string name="activity_login_imageview_id">logimg</string>
    <string name="activity_login_edittext_id">username</string>
    <string name="activity_login_edittext1_id">password</string>
    <string name="activity_login_button_id">loginbtn</string>
    <string name="activity_login_button2_id">signupbtn</string>
    <string name="activity_sign_up_edittext_id">sname</string>
    <string name="activity_sign_up_edittext1_id">semail</string>
    <string name="activity_sign_up_edittext2_id">smob</string>
    <string name="activity_sign_up_edittext3_id">spass</string>
    <string name="activity_sign_up_edittext4_id">sconpass</string>
    <string name="activity_sign_up_button_id">register</string>
    <string name="homepage_recyclerview_relativelayout_imageview_contentdescription">Service Centre Photo</string>
    <string name="homepage_recyclerview_relativelayout_linearlayout_relativelayout_textview2_text">(Authorised)</string>
    <string name="navigation_menu_item_title">History</string>
    <string name="navigation_menu_item1_title">My Bikes</string>
    <string name="navigation_menu_item2_title">Profile</string>
    <string name="navigation_menu_item3_title">Settings</string>
    <string name="navigation_menu_item4_title">About Us</string>
    <string name="navigation_menu_item5_title">Logout</string>
    <string name="activity_services_selection_checkbox_text">Normal Service (Engine oil change, Brake adjustment, Air filter, Oil filter, Chain lubrication)</string>
    <string name="activity_services_selection_checkbox2_text">Body Parts Change</string>
    <string name="activity_services_selection_checkbox3_text">Engine work</string>
    <string name="activity_services_selection_checkbox4_text">Others, specify</string>
    <string name="activity_services_selection_textview_text">Select services:</string>
    <string name="activity_services_selection_edittext_hint">Others, Specify here....</string>
    <string name="activity_services_selection_button_text">Book time slot</string>
    <string name="activity_service_booked_imageview_contentdescription">Success</string>
    <string name="activity_service_booked_textview_text">Booking Details:</string>
    <string name="activity_service_booked_textview2_text">Service Centre:</string>
    <string name="activity_service_booked_textview4_text">Time Slot:</string>
    <string name="activity_service_booked_textview6_text">Services:</string>
    <string name="activity_service_booked_linearlayout_button_text">Booking History</string>
    <string name="activity_service_booked_linearlayout_button1_text">Modify Booking</string>
    <string name="activity_service_booked_button_text">Home</string>
    <string name="activity_booking_history_radiogroup_radiobutton_text">Quarterly</string>
    <string name="activity_booking_history_radiogroup_radiobutton2_text">Half yearly</string>
    <string name="activity_booking_history_radiogroup_radiobutton3_text">Yearly</string>
    <string name="activity_booking_history_radiogroup_radiobutton4_text">All</string>
    <string name="activity_profile_imageview_contentdescription">Profile Photo</string>
    <string name="activity_profile_edittext_hint">Name</string>
    <string name="activity_profile_edittext1_hint">Email</string>
    <string name="activity_profile_edittext2_hint">Address</string>
    <string name="activity_profile_edittext3_hint">Mobile No.</string>
    <string name="activity_profile_edittext4_hint">Old password</string>
    <string name="activity_profile_edittext5_hint">New password</string>
    <string name="activity_profile_edittext6_hint">Confirm password</string>
    <string name="activity_profile_button_text">Modify</string>
    <string name="activity_login_imageview_contentdescription">Login Image</string>
    <string name="activity_login_edittext_hint">Mobile No.</string>
    <string name="activity_login_edittext1_hint">Password</string>
    <string name="activity_login_button_text">Login</string>
    <string name="activity_login_button2_text">Sign Up</string>
    <string name="activity_sign_up_imageview_contentdescription">Sign Up Image</string>
    <string name="activity_sign_up_edittext_hint">Name</string>
    <string name="activity_sign_up_edittext1_hint">Email</string>
    <string name="activity_sign_up_edittext2_hint">Mobile No.</string>
    <string name="activity_sign_up_edittext3_hint">Password</string>
    <string name="activity_sign_up_edittext4_hint">Confirm Password</string>
    <string name="activity_sign_up_button_text">Register</string>
</resources>