<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/logimg"
        android:background="@drawable/ic_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/activity_login_imageview_contentdescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:weightSum="4"
        android:layout_below="@id/logimg"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_edittext_hint"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:id="@+id/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_edittext1_hint"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:id="@+id/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_weight="1"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_button_text"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/loginbtn"
            android:layout_weight="1"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_button2_text"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/signupbtn"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>