<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/signupimg"
        android:background="@drawable/ic_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/activity_sign_up_imageview_contentdescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/signupimg"
        android:weightSum="6">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_sign_up_edittext_hint"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/sname"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_sign_up_edittext1_hint"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/semail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_sign_up_edittext2_hint"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/smob"
            android:importantForAutofill="no"
            android:inputType="number"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_sign_up_edittext3_hint"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/spass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_sign_up_edittext4_hint"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/sconpass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_weight="1"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_sign_up_button_text"
            android:textSize="20sp"
            android:id="@+id/register"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>