<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/primg"
        android:background="@drawable/img"
        android:contentDescription="@string/activity_profile_imageview_contentdescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/primg"
        android:visibility="visible"
        android:id="@+id/prname"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/primg"
        android:visibility="gone"
        android:id="@+id/prnameedit"
        android:importantForAutofill="no"
        android:hint="@string/activity_profile_edittext_hint"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/prname"
        android:visibility="visible"
        android:id="@+id/premail"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/prname"
        android:visibility="gone"
        android:id="@+id/premailedit"
        android:importantForAutofill="no"
        android:hint="@string/activity_profile_edittext1_hint"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/premail"
        android:visibility="visible"
        android:id="@+id/praddress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/premail"
        android:visibility="gone"
        android:id="@+id/praddressedit"
        android:importantForAutofill="no"
        android:hint="@string/activity_profile_edittext2_hint"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/premail"
        android:visibility="visible"
        android:id="@+id/prmob"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/premail"
        android:visibility="gone"
        android:id="@+id/prmobedit"
        android:importantForAutofill="no"
        android:hint="@string/activity_profile_edittext3_hint"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/prmob"
        android:visibility="visible"
        android:id="@+id/prpass"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/prmob"
        android:visibility="gone"
        android:id="@+id/proldpass"
        android:importantForAutofill="no"
        android:hint="@string/activity_profile_edittext4_hint"
        android:inputType="text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/proldpass"
        android:visibility="gone"
        android:id="@+id/prnewpass"
        android:importantForAutofill="no"
        android:hint="@string/activity_profile_edittext5_hint"
        android:inputType="text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/prnewpass"
        android:visibility="gone"
        android:id="@+id/prconpass"
        android:importantForAutofill="no"
        android:hint="@string/activity_profile_edittext6_hint"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/prpass"
        android:text="@string/activity_profile_button_text"
        android:id="@+id/modsave"/>

</RelativeLayout>